fixing landing page on smaller displays

--- a/styles/Landing.module.css
+++ b/styles/Landing.module.css
@@ -54,7 +54,6 @@
     position: relative;
     text-align: center;
     width: 100%;
-    height: 4rem;
     border: none;
 }
 
